--- a/TelegramApiBot/WebContent/WEB-INF/web.xml
+++ b/TelegramApiBot/WebContent/WEB-INF/web.xml
@@ -19,4 +19,10 @@
     <servlet-name>WebHookTelegramApi</servlet-name>
     <url-pattern>/AAEFMyZEhUso49cHojFndUnw3qtY3LnFwZA</url-pattern>
   </servlet-mapping>
+    <resource-ref>
+	<description>OpenShift DS</description>
+	<res-ref-name>jdbc/MySQLDS</res-ref-name>
+	<res-type>javax.sql.DataSource</res-type>
+	<res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
